# runwatch

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: runwatch.toml
scripts/: bootstrap-dev.sh  install-host.sh  purge-host.sh
src/runwatch/: __init__.py  __main__.py  check_factory.py  cli.py  config.py  defaults.py  doctor.py  errors.py  execution.py  filesystem.py  interfaces.py  logs.py  main.py  main_support.py  prompts.py  results.py  runner.py  service.py  setup_wizard.py  signals.py  target_runtime.py
src/runwatch/checks/: __init__.py  http.py  system.py
src/runwatch/commands/: __init__.py  common.py  config.py  doctor.py  generate.py  serve.py  setup.py  systemd.py  target.py
src/runwatch/exporters/: __init__.py  openmetrics.py
src/runwatch/installation/: __init__.py  systemd.py
src/runwatch/targets/: __init__.py  models.py  monitor.py  render.py  resolver.py  sampler.py
src/runwatch/templates/: __init__.py  compose.py  prometheus.py  systemd.py
tests/: test_architecture.py  test_cli.py  test_config.py  test_doctor.py  test_execution.py  test_exporter.py  test_filesystem.py  test_logs.py  test_main.py  test_runner.py  test_service.py  test_setup.py  test_system_check.py  test_systemd_install.py  test_target_monitor.py  test_target_render.py  test_target_resolver.py  test_target_sampler.py  test_templates.py
