[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "runwatch"
dynamic = ["version"]
description = "Inspect and continuously monitor Linux services and process trees."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Tien Du" }]
dependencies = [
  "psutil>=6.0",
  "requests>=2.31",
  "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-psutil>=6.0",
]

[project.scripts]
runwatch = "runwatch.main:main"

[tool.hatch.version]
path = "src/runwatch/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/runwatch"]

[tool.ruff]
line-length = 100
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/examples/**",
  "/README.md",
  "/Makefile",
  "/LICENSE",
  "/CHANGELOG.md",
  "/pyproject.toml",
]
exclude = [
  "/.venv*",
  "/.pytest_cache",
  "/.ruff_cache",
  "/.mypy_cache",
  "/dist",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
